lab1/Test/L1-A-10-61.output
Error Type A at Line 12
Error Type A at Line 28
Error Type A at Line 37
Error Type B at Line 44
