lab1/Test/L1-A-10-61.cmm
float dgFaoaH [ 282476422 ] 
;
int ;
struct tEqYO4czE8YH8n ti96NPMfCIxhy ( ) {
  int xM7 , mNFRRDY6tS10tGx7NV = jUw6WB4HMB1jo0s = 
    a5L_6dCOvNhBfYB7ur || GQP0nvCYb07ObE_ && UNjtm68hD8bbz0m8R 
    - c0d8NC2Sg9 / ! - cqXHRskZR ( pAgTFQDcVvFM >= hpxpugyVf6 
    [ luiJwXfx = vQ9ck3QtN != YqZHFgGrxkKK_llUC7 + KeiUC5 
    * MDEyxge5KcC ( NTNe_wAvtfVRoPNOhe4 , oWZk9GB = nSii5D_5ol1OhCOh1k 
    <= n8Iw8 - ! AHY3ZUi ( SSeAN == ivYV1J7BiCZCskCvE 
    + sD_PGGObS7pyYz9 [ iF4rxNADMO0Bx_ || WpboC6kMLuBlE2ko 
    > - ( xQp0WM1ZGm @) / 1066204431.891244846 . oYu1dxLlBIPiVIYv 
    ] . CBxIbgboIbqrw . EukM . qVOyr9g1JeD6 . UmvU9D8N 
    ) ) < cUloRJJjldzpbM1ptz + - VX6PDuCAgA2stTKL0DJ ( 
    ) ] . L * 548292012 ) ;
}
int ;
int hiHb_QzUO ( int dIb ) {
  if ( VU6dpe58qa )   while ( BtX36qLVG3KsW6 )   OteHmGE 
    ;


{
  }}
struct {
  int NZC3LGiMfT ;
  int uNUgavdejwF1 ;
  struct `{
  }uSLa2d ;
  struct ZfHKm8pMoj {
  }fLp3xjcezMYrWTo9nrxo ;
  struct Hh A ;
};
int EoimNNEsJ4cEKV5YLh , l9 

;
int ;\
int PopBa7Z8DxXE6kT ( int LEVlLpOnvPHrv2SY , int vs 
  ) {
  if ( DWgAbJUM_5k5sZR )   OllJPSPgFyJsSdoyzq95 ;
else   return nUZ ;

}
int QC ( ) int {
  V9 ;
  if ( Hjbn )   VqgLu0rpgOdmaFyh ;
else   if ( kG_8VRte )   WRBV ;


}
